# A-Multi-Agent-Research-Assistant-Using-AutoGen

./: .dockerignore  Dockerfile.backend  debug_payload.json  main.py  pyproject.toml  requirements.txt  verify_async.py  verify_raw.py
crew/: agents.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/components/: ChatInterface.jsx  Footer.jsx  ThemeToggle.jsx
frontend/src/hooks/: useResearchStream.js
graph/: nodes.py  state.py  supervisor.py  workflow.py
tools/: custom_gemini_client.py
workflow/: orchestration.py
